# datafiles-json

./: README.md  pyproject.toml
datafiles/: formats.py  manager.py  types.py
datafiles/converters/: __init__.py  extensions.py
notebooks/: file_inference.ipynb  format_options.ipynb  generic_types.ipynb  manager_api.ipynb  mapper_api.ipynb  nested_dataclass.ipynb  patched_containers.ipynb  readme.ipynb
tests/: samples.py  test_automatic_attributes.py  test_custom_converters.py  test_custom_converters_future.py  test_extended_converters.py  test_file_inference.py  test_generic_converters.py  test_instantiation.py  test_loading.py  test_orm_usage.py  test_patched_methods.py  test_profiling.py  test_saving.py  test_setup.py
